feat: Add user marshmallow fetch
